dev/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  type: NodePort
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
      nodePort: 32000  # You can pick any port between 30000–32767
